--- a/QL_vaitro_themmoi.html
+++ b/QL_vaitro_themmoi.html
@@ -51,31 +51,31 @@
                     </li>
                     <li class="nav-item" data-item="User" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="user-icon" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="user-icon" class="nav-icon">
                             <span class="nav-text">Người dùng</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Product" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="product-ico" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="product-ico" class="nav-icon">
                             <span class="nav-text">Nguyên liệu</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Recept" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="recept-icon" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="recept-icon" class="nav-icon">
                             <span class="nav-text">Công thức</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Warehouse" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="warehouse-icon" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="warehouse-icon" class="nav-icon">
                             <span class="nav-text">Kho</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Report" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="report-icon" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="report-icon" class="nav-icon">
                             <span class="nav-text">Báo cáo</span>
                         </a>
                     </li>
@@ -128,7 +128,7 @@
             <div class="dropdown">
                 <!--Icon thông báo-->
                 <div class="notification-icon" onclick="toggleNotifi()">
-                    <img src="img/menu/bell.png" alt="notification">
+                    <img src="asset/icon-svg/bell.svg" alt="notification">
                     <span>1</span>
                 </div>
                 <!--Hộp thông báo-->
