--- a/QL_danhmuc.html
+++ b/QL_danhmuc.html
@@ -136,37 +136,37 @@
                 <ul class="navigation-left">
                     <li class="nav-item" data-item="Dashboard">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="dashboard-icon" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="dashboard-icon" class="nav-icon">
                             <span class="nav-text">Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="User" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="user-icon" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="user-icon" class="nav-icon">
                             <span class="nav-text">Người dùng</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Product" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="product-ico" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="product-ico" class="nav-icon">
                             <span class="nav-text">Nguyên liệu</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Recept" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="recept-icon" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="recept-icon" class="nav-icon">
                             <span class="nav-text">Công thức</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Warehouse" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="warehouse-icon" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="warehouse-icon" class="nav-icon">
                             <span class="nav-text">Kho</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Report" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="img/menu/User.png" alt="report-icon" class="nav-icon">
+                            <img src="asset/icon-svg/user.svg" alt="report-icon" class="nav-icon">
                             <span class="nav-text">Báo cáo</span>
                         </a>
                     </li>
@@ -219,7 +219,7 @@
             <div class="dropdown">
                 <!--Icon thông báo-->
                 <div class="notification-icon" onclick="toggleNotifi()">
-                    <img src="img/menu/bell.png" alt="notification">
+                    <img src="asset/icon-svg/bell.svg" alt="notification">
                     <span>1</span>
                 </div>
                 <!--Hộp thông báo-->
@@ -230,7 +230,7 @@
                     <!---Hiển thị thông báo-->
                     <div class="notifi-body">
                         <div class="notifi-item">
-                            <img src="img/menu/sua_tuoi_vinamilk.jpg" alt="notification1">
+                            <img src="asset/image/sua_tuoi_vinamilk.jpg" alt="notification1">
                             <div class="text">
                                 <h4>Thong bao</h4>
                                 <p> Lorem ipsum dolor sit amet.</p>
@@ -238,7 +238,7 @@
                             </div>
                         </div>
                         <div class="notifi-item">
-                            <img src="img/menu/sua_tuoi_vinamilk.jpg" alt="notification1">
+                            <img src="asset/image/sua_tuoi_vinamilk.jpg" alt="notification1">
                             <div class="text">
                                 <h4>Thong bao</h4>
                                 <p> Lorem ipsum dolor sit amet.</p>
@@ -246,7 +246,7 @@
                             </div>
                         </div>
                         <div class="notifi-item">
-                            <img src="img/menu/sua_tuoi_vinamilk.jpg" alt="notification1">
+                            <img src="asset/image/sua_tuoi_vinamilk.jpg" alt="notification1">
                             <div class="text">
                                 <h4>Thong bao</h4>
                                 <p> Lorem ipsum dolor sit amet.</p>
@@ -254,7 +254,7 @@
                             </div>
                         </div>
                         <div class="notifi-item">
-                            <img src="img/menu/sua_tuoi_vinamilk.jpg" alt="notification1">
+                            <img src="asset/image/sua_tuoi_vinamilk.jpg" alt="notification1">
                             <div class="text">
                                 <h4>Thong bao</h4>
                                 <p> Lorem ipsum dolor sit amet.</p>
@@ -272,7 +272,7 @@
             <div class="dropdown">
                 <div class="profile-dropdown-btn" onclick="toggle()">
                     <!-- anh profile-->
-                    <img src="img/menu/sua_tuoi_vinamilk.jpg" alt="profile" class="profile-img">
+                    <img src="asset/image/sua_tuoi_vinamilk.jpg" alt="profile" class="profile-img">
                 </div>
                 <div id="profile-box">
                     <ul class="profile-dropdown-list">
