--- a/QL_danhmuc.html
+++ b/QL_danhmuc.html
@@ -136,37 +136,37 @@
                 <ul class="navigation-left">
                     <li class="nav-item" data-item="Dashboard">
                         <a href="#" class="nav-item-hold">
-                            <img src="asset/icon-svg/user.svg" alt="dashboard-icon" class="nav-icon">
+                            <img src="asset/icon-svg/home.svg" alt="dashboard-icon" class="nav-icon">
                             <span class="nav-text">Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="User" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="asset/icon-svg/user.svg" alt="user-icon" class="nav-icon">
+                            <img src="asset/icon-svg/group.svg" alt="user-icon" class="nav-icon">
                             <span class="nav-text">Người dùng</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Product" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="asset/icon-svg/user.svg" alt="product-ico" class="nav-icon">
+                            <img src="asset/icon-svg/ingredient.svg" alt="product-ico" class="nav-icon">
                             <span class="nav-text">Nguyên liệu</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Recept" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="asset/icon-svg/user.svg" alt="recept-icon" class="nav-icon">
+                            <img src="asset/icon-svg/recipe-book.svg" alt="recept-icon" class="nav-icon">
                             <span class="nav-text">Công thức</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Warehouse" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="asset/icon-svg/user.svg" alt="warehouse-icon" class="nav-icon">
+                            <img src="asset/icon-svg/warehouse.svg" alt="warehouse-icon" class="nav-icon">
                             <span class="nav-text">Kho</span>
                         </a>
                     </li>
                     <li class="nav-item" data-item="Report" data-submenu="true">
                         <a href="#" class="nav-item-hold">
-                            <img src="asset/icon-svg/user.svg" alt="report-icon" class="nav-icon">
+                            <img src="asset/icon-svg/report.svg" alt="report-icon" class="nav-icon">
                             <span class="nav-text">Báo cáo</span>
                         </a>
                     </li>
