--- a/QL_danhmuc.html
+++ b/QL_danhmuc.html
@@ -214,7 +214,6 @@
 
 
     <!--bắt đầu code ở đây-->
-    <!-- <div class="main"> -->
     <div class="container-fluid">
         <div class="row">
             <div class=" col-sm-2 col-md-1">
@@ -292,7 +291,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
             <div class="col-sm-10 col-md-11">
                 <div class="heading">
@@ -794,10 +792,10 @@
                     </footer>
                   </blockquote>
                 </div>
-               
             </div>
-
         </div>
+        </div>
+    </div>
 
         <script src="menu.js "></script>
         <script src="QL_vaitro.js "></script>
