--- a/QL_danhmuc.html
+++ b/QL_danhmuc.html
@@ -301,12 +301,6 @@
                         <div class="col-4">
                             <div class="items-controller ">
                                 <span class="col-5">Hiển thị</span>
-                                <!-- <select name=" " id="itemperpage ">
-                                                    <option value="04 ">04</option>
-                                                    <option value="05 " selected>05</option>
-                                                    <option value="08 ">08</option>
-                                                </select> -->
-
                                 <select class="custom-select col-2 " id="itemperpage ">
                                                     <option selected>10</option>
                                                     <option value="1 ">10</option>
@@ -340,32 +334,32 @@
                 <div class="row my-2 ">
                         <table id="table " class="table table-sm-responsive table-hover ">
                             <thead>
-                                <tr >
-                                <th scope="col "  class="font-weight-bold " >
+                                <tr class="text-center font-weight-bold ">
+                                <th scope="col ">
                                     <span>#</span>
                                 </th>
-                                <th scope="col "  class="font-weight-bold ">
+                                <th scope="col ">
                                     <span>ID Danh mục</span>
                                 </th>
-                                <th scope="col "  class="font-weight-bold ">
+                                <th scope="col ">
                                     <span>Hình ảnh</span>
                                 </th>
-                                <th scope="col "  class="font-weight-bold ">
+                                <th scope="col ">
                                     <span>Tên danh mục</span>
                                 </th>
-                                <th scope="col "  class="font-weight-bold ">
+                                <th scope="col ">
                                     <span>Phân loại</span>
                                 </th>
-                                <th scope="col "  class="font-weight-bold ">
+                                <th scope="col ">
                                     <span>Mô tả chi tiết</span>
                                 </th>
-                                <th scope="col "  class="font-weight-bold ">
+                                <th scope="col ">
                                     <span>Lịch sử cập nhật</span>
                                 </th>
-                                <th scope="col "  class="font-weight-bold ">
+                                <th scope="col ">
                                     <span>Trạng thái</span>
                                 </th>
-                                <th scope="col "  class="font-weight-bold ">
+                                <th scope="col ">
                                     <span>Hành động</span>
                                 </th>
                                 </tr>
@@ -389,7 +383,7 @@
                                             <span>Thực phẩm</span>
                                         </td>
                                         <td>
-                                            <span><p class="font-italic text-muted ">Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ Mỹ, Úc, châu Âu, ... </p></span>
+                                            <span><p class="font-italic text-muted " data-toggle="tooltip " data-placement="top " title="Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ... ">Trái... (viết hàm tooltip giới hạn ký tự)</p></span>
                                         </td>
                                         <td>
                                             <span><p class="font-italic text-muted ">10:20:30 - 03/05/2024</p></span>
@@ -428,7 +422,7 @@
                                             <span>Thực phẩm</span>
                                         </td>
                                         <td>
-                                            <span><p class="font-italic text-muted ">Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ Mỹ, Úc, châu Âu, ... </p></span>
+                                            <span><p class="font-italic text-muted " data-toggle="tooltip " data-placement="top " title="Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ... ">Trái... (viết hàm tooltip giới hạn ký tự)</p></span>
                                         </td>
                                         <td>
                                             <span><p class="font-italic text-muted ">10:20:30 - 03/05/2024</p></span>
@@ -467,7 +461,7 @@
                                             <span>Thực phẩm</span>
                                         </td>
                                         <td>
-                                            <span><p class="font-italic text-muted ">Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ Mỹ, Úc, châu Âu, ... </p></span>
+                                            <span><p class="font-italic text-muted " data-toggle="tooltip " data-placement="top " title="Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ... ">Trái... (viết hàm tooltip giới hạn ký tự)</p></span>
                                         </td>
                                         <td>
                                             <span><p class="font-italic text-muted ">10:20:30 - 03/05/2024</p></span>
@@ -506,7 +500,7 @@
                                             <span>Thực phẩm</span>
                                         </td>
                                         <td>
-                                            <span><p class="font-italic text-muted ">Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ Mỹ, Úc, châu Âu, ... </p></span>
+                                            <span><p class="font-italic text-muted " data-toggle="tooltip " data-placement="top " title="Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ... ">Trái... (viết hàm tooltip giới hạn ký tự)</p></span>
                                         </td>
                                         <td>
                                             <span><p class="font-italic text-muted ">10:20:30 - 03/05/2024</p></span>
@@ -545,7 +539,7 @@
                                             <span>Thực phẩm</span>
                                         </td>
                                         <td>
-                                            <span><p class="font-italic text-muted ">Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ Mỹ, Úc, châu Âu, ... </p></span>
+                                            <span><p class="font-italic text-muted " data-toggle="tooltip " data-placement="top " title="Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ... ">Trái... (viết hàm tooltip giới hạn ký tự)</p></span>
                                         </td>
                                         <td>
                                             <span><p class="font-italic text-muted ">10:20:30 - 03/05/2024</p></span>
@@ -584,7 +578,7 @@
                                             <span>Thực phẩm</span>
                                         </td>
                                         <td>
-                                            <span><p class="font-italic text-muted ">Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ Mỹ, Úc, châu Âu, ... </p></span>
+                                            <span><p class="font-italic text-muted " data-toggle="tooltip " data-placement="top " title="Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ... ">Trái... (viết hàm tooltip giới hạn ký tự)</p></span>
                                         </td>
                                         <td>
                                             <span><p class="font-italic text-muted ">10:20:30 - 03/05/2024</p></span>
@@ -623,7 +617,7 @@
                                             <span>Thực phẩm</span>
                                         </td>
                                         <td>
-                                            <span><p class="font-italic text-muted ">Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ Mỹ, Úc, châu Âu, ... </p></span>
+                                            <span><p class="font-italic text-muted " data-toggle="tooltip " data-placement="top " title="Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ... ">Trái... (viết hàm tooltip giới hạn ký tự)</p></span>
                                         </td>
                                         <td>
                                             <span><p class="font-italic text-muted ">10:20:30 - 03/05/2024</p></span>
@@ -662,7 +656,7 @@
                                             <span>Thực phẩm</span>
                                         </td>
                                         <td>
-                                            <span><p class="font-italic text-muted ">Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ Mỹ, Úc, châu Âu, ... </p></span>
+                                            <span><p class="font-italic text-muted " data-toggle="tooltip " data-placement="top " title="Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ... ">Trái... (viết hàm tooltip giới hạn ký tự)</p></span>
                                         </td>
                                         <td>
                                             <span><p class="font-italic text-muted ">10:20:30 - 03/05/2024</p></span>
@@ -701,7 +695,7 @@
                                             <span>Thực phẩm</span>
                                         </td>
                                         <td>
-                                            <span><p class="font-italic text-muted ">Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ Mỹ, Úc, châu Âu, ... </p></span>
+                                            <span><p class="font-italic text-muted " data-toggle="tooltip " data-placement="top " title="Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ... ">Trái... (viết hàm tooltip giới hạn ký tự)</p></span>
                                         </td>
                                         <td>
                                             <span><p class="font-italic text-muted ">10:20:30 - 03/05/2024</p></span>
@@ -740,7 +734,7 @@
                                             <span>Thực phẩm</span>
                                         </td>
                                         <td>
-                                            <span><p class="font-italic text-muted ">Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ Mỹ, Úc, châu Âu, ... </p></span>
+                                            <span><p class="font-italic text-muted " data-toggle="tooltip " data-placement="top " title="Trái cây tươi tại Nam An Market được tuyển chọn kỹ và nhập khẩu từ... ">Trái... (viết hàm tooltip giới hạn ký tự)</p></span>
                                         </td>
                                         <td>
                                             <span><p class="font-italic text-muted ">10:20:30 - 03/05/2024</p></span>
